--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <nav>
         <ul>
           <li>Studio</li>
+          <a href="studio.html">Studio</a>
           <li>Portofolio</li>
+          <a href="portfolio.html" target="_blank" rel="?">Portofoliu</a>
           <li>Contacts</li>
         </ul>
       </nav>
