Adaugat css(incercare)

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofoliu t2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
-    <header class="index-header">
+    <header class="global-header">
       <a class="logo" href="index.html">
         <span class="web">Web</span>
         <span class="studio">Studio</span>
       </a>
 
       <nav>
-        <ul>
-          <li>Studio</li>
-          <li>Portofolio</li>
-          <li>Contacts</li>
+        <ul class="nav-bar">
+          <a href="index.html">Studio</a>
+          <a href="portfolio.html">Portofolio</a>
+          <a href="contacts.html">Contacts</a>
         </ul>
       </nav>
 
@@ -25,42 +31,46 @@
       <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
     </header>
     <main>
-      <ul>
-        <button>All</button>
-        <button>Web Site</button>
-        <button>App</button>
-        <button>Design</button>
-        <button>Marketing</button>
-      </ul>
       <section>
-        <h2>Our Team</h2>
-        <img src="images/img (4) (1).jpg" alt="Banking" width="350" />
-        <h3>Banking App Interface Concept</h3>
-        <h4>App</h4>
-        <img src="images/img (5) (1).jpg" alt="Cashless" width="350" />
-        <h3>Cashless Payment</h3>
-        <h4>Marketing</h4>
-        <img src="images/img (6) (1).jpg" alt="Meditation" width="350" />
-        <h3>Meditation App</h3>
-        <h4>App</h4>
-        <img src="images/img (7) (1).jpg" alt="Taxi" width="350" />
-        <h3>Taxi Service</h3>
-        <h4>Marketing</h4>
-        <img src="images/img (8) (1).jpg" alt="Screen" width="350" />
-        <h3>Screen Illustrations</h3>
-        <h4>Design</h4>
-        <img src="images/img (9) (1).jpg" alt="Online" width="350" />
-        <h3>Online Courses</h3>
-        <h4>Marketing</h4>
-        <img src="images/img (10) (1).jpg" alt="Instragram" width="350" />
-        <h3>Instragram Stories Concept</h3>
-        <h4>Design</h4>
-        <img src="images/img (11) (1).jpg" alt="Organic" width="350" />
-        <h3>Organic Food</h3>
-        <h4>Web Site</h4>
-        <img src="images/img (12) (1).jpg" alt="Fresh" width="350" />
-        <h3>Fresh Coffeep</h3>
-        <h4>Web Site</h4>
+        <ul>
+          <button type="button">All</button>
+          <button type="button">Web Site</button>
+          <button type="button">App</button>
+          <button type="button">Design</button>
+          <button type="button">Marketing</button>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <h2>Our Team</h2>
+          <img src="images/img (4) (1).jpg" alt="Banking" width="350" />
+          <h3>Banking-App-Interface-Concept</h3>
+          <h4>App</h4>
+          <img src="images/img (5) (1).jpg" alt="Cashless" width="350" />
+          <h3>Cashless-Payment</h3>
+          <h4>Marketing</h4>
+          <img src="images/img (6) (1).jpg" alt="Meditation" width="350" />
+          <h3>Meditation-App</h3>
+          <h4>App</h4>
+          <img src="images/img (7) (1).jpg" alt="Taxi" width="350" />
+          <h3>Taxi-Service</h3>
+          <h4>Marketing</h4>
+          <img src="images/img (8) (1).jpg" alt="Screen" width="350" />
+          <h3>Screen-Illustrations</h3>
+          <h4>Design</h4>
+          <img src="images/img (9) (1).jpg" alt="Online" width="350" />
+          <h3>Online-Courses</h3>
+          <h4>Marketing</h4>
+          <img src="images/img (10) (1).jpg" alt="Instragram" width="350" />
+          <h3>Instragram-Stories-Concept</h3>
+          <h4>Design</h4>
+          <img src="images/img (11) (1).jpg" alt="Organic" width="350" />
+          <h3>Organic-Food</h3>
+          <h4>Web-Site</h4>
+          <img src="images/img (12) (1).jpg" alt="Fresh" width="350" />
+          <h3>Fresh-Coffeep</h3>
+          <h4>Web-Site</h4>
+        </ul>
       </section>
     </main>
     <footer>
