--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="global-header">
@@ -27,56 +27,57 @@
         </ul>
       </nav>
 
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+      <a class="a-contact" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="a-contact" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
     </header>
     <main>
       <section>
         <ul>
-          <button type="button">All</button>
-          <button type="button">Web Site</button>
-          <button type="button">App</button>
-          <button type="button">Design</button>
-          <button type="button">Marketing</button>
+          <button class="button-category" type="button">All</button>
+          <button class="button-category" type="button">Web Site</button>
+          <button class="button-category" type="button">App</button>
+          <button class="button-category" type="button">Design</button>
+          <button class="button-category" type="button">Marketing</button>
         </ul>
       </section>
       <section>
         <ul>
-          <h2>Our Team</h2>
           <img src="images/img (4) (1).jpg" alt="Banking" width="350" />
-          <h3>Banking-App-Interface-Concept</h3>
-          <h4>App</h4>
+          <h3 class="h3-courses">Banking-App-Interface-Concept</h3>
+          <h4 class="h4-clas">App</h4>
           <img src="images/img (5) (1).jpg" alt="Cashless" width="350" />
-          <h3>Cashless-Payment</h3>
-          <h4>Marketing</h4>
+          <h3 class="h3-courses">Cashless-Payment</h3>
+          <h4 class="h4-clas">Marketing</h4>
           <img src="images/img (6) (1).jpg" alt="Meditation" width="350" />
-          <h3>Meditation-App</h3>
-          <h4>App</h4>
+          <h3 class="h3-courses">Meditation-App</h3>
+          <h4 class="h4-clas">App</h4>
           <img src="images/img (7) (1).jpg" alt="Taxi" width="350" />
-          <h3>Taxi-Service</h3>
-          <h4>Marketing</h4>
+          <h3 class="h3-courses">Taxi-Service</h3>
+          <h4 class="h4-clas">Marketing</h4>
           <img src="images/img (8) (1).jpg" alt="Screen" width="350" />
-          <h3>Screen-Illustrations</h3>
-          <h4>Design</h4>
+          <h3 class="h3-courses">Screen-Illustrations</h3>
+          <h4 class="h4-clas">Design</h4>
           <img src="images/img (9) (1).jpg" alt="Online" width="350" />
-          <h3>Online-Courses</h3>
-          <h4>Marketing</h4>
+          <h3 class="h3-courses">Online-Courses</h3>
+          <h4 class="h4-clas">Marketing</h4>
           <img src="images/img (10) (1).jpg" alt="Instragram" width="350" />
-          <h3>Instragram-Stories-Concept</h3>
-          <h4>Design</h4>
+          <h3 class="h3-courses">Instragram-Stories-Concept</h3>
+          <h4 class="h4-clas">Design</h4>
           <img src="images/img (11) (1).jpg" alt="Organic" width="350" />
-          <h3>Organic-Food</h3>
-          <h4>Web-Site</h4>
+          <h3 class="h3-courses">Organic-Food</h3>
+          <h4 class="h4-clas">Web-Site</h4>
           <img src="images/img (12) (1).jpg" alt="Fresh" width="350" />
-          <h3>Fresh-Coffeep</h3>
-          <h4>Web-Site</h4>
+          <h3 class="h3-courses">Fresh-Coffeep</h3>
+          <h4 class="h4-clas">Web-Site</h4>
         </ul>
       </section>
     </main>
     <footer>
       <span class="web">Web</span>
       <span class="studio">Studio</span>
-      <p>
+      <p class="p-desciption">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
