--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tema 2</title>
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-
   <body>
     <header class="index-header">
       <a class="logo" href="index.html">
@@ -29,42 +27,44 @@
         </ul>
       </nav>
 
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+      <a class="a-contact" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="a-contact" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
     </header>
 
     <main>
       <section>
-        <h1>Effective Solutions for Yout Business</h1>
-        <button type="button">Order Services</button>
+        <h1 class="h1-hero">Effective Solutions for Yout Business</h1>
+        <button class="button-1" type="button">Order Services</button>
       </section>
 
       <section>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="h3-sections">Strategy</h3>
+            <p class="p-desciption">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="h3-sections">Punctuality</h3>
+            <p class="p-desciption">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="h3-sections">Diligence</h3>
+            <p class="p-desciption">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="h3-sections">Technologies</h3>
+            <p class="p-desciption">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -73,7 +73,7 @@
       </section>
 
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="h2-mission">What are we doing</h2>
         <ul>
           <li><img src="images/Rectangle71.jpg" alt="img1" width="350" /></li>
           <li><img src="images/img2.jpg" alt="img2" width="350" /></li>
@@ -82,26 +82,26 @@
       </section>
 
       <section>
-        <h2>Our Team</h2>
+        <h2 class="h2-mission">Our Team</h2>
         <img src="images/img.jpg" alt="Mark" width="350" />
-        <h3>Mark Guerrero</h3>
-        <h4>Product Designer</h4>
+        <h3 class="h3-names">Mark Guerrero</h3>
+        <h4 class="h4-jobs">Product Designer</h4>
         <img src="images/img(1).jpg" alt="Tom" width="350" />
-        <h3>Tom Ford</h3>
-        <h4>Frontend Developer</h4>
+        <h3 class="h3-names">Tom Ford</h3>
+        <h4 class="h4-jobs">Frontend Developer</h4>
         <img src="images/img(2).jpg" alt="Camila" width="350" />
-        <h3>Camila Garcia</h3>
-        <h4>Marketing</h4>
+        <h3 class="h3-names">Camila Garcia</h3>
+        <h4 class="h4-jobs">Marketing</h4>
         <img src="images/img(3).jpg" alt="Daniel" width="350" />
-        <h3>Daniel Wilson</h3>
-        <h4>UI Designer</h4>
+        <h3 class="h3-names">Daniel Wilson</h3>
+        <h4 class="h4-jobs">UI Designer</h4>
       </section>
     </main>
 
     <footer>
       <span class="web">Web</span>
       <span class="studio">Studio</span>
-      <p>
+      <p class="p-desciption">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
