--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
       <nav>
         <ul class="nav-bar">
-          <a href="index.html">Studio</a>
-          <a href="portfolio.html">Portofoliu</a>
-          <a href="contacts.html">Contacts</a>
+          <li><a href="index.html">Studio</a></li>
+          <li><a href="portfolio.html">Portofolio</a></li>
+          <li><a href="contacts.html">Contacts</a></li>
         </ul>
       </nav>
 
