--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,9 @@
 
       <nav>
         <ul class="nav-bar">
-          <a href="index.html">Studio</a>
-          <a href="portfolio.html">Portofolio</a>
-          <a href="contacts.html">Contacts</a>
+          <li><a href="index.html">Studio</a></li>
+          <li><a href="portfolio.html">Portofolio</a></li>
+          <li><a href="contacts.html">Contacts</a></li>
         </ul>
       </nav>
 
@@ -35,42 +35,106 @@
     <main>
       <section>
         <ul>
-          <button class="button-category" type="button">All</button>
-          <button class="button-category" type="button">Web Site</button>
-          <button class="button-category" type="button">App</button>
-          <button class="button-category" type="button">Design</button>
-          <button class="button-category" type="button">Marketing</button>
+          <li>
+            <button class="button-category" type="button">All</button>
+          </li>
+          <li>
+            <button class="button-category" type="button">Web Site</button>
+          </li>
+          <li>
+            <button class="button-category" type="button">App</button>
+          </li>
+          <li>
+            <button class="button-category" type="button">Design</button>
+          </li>
+          <li>
+            <button class="button-category" type="button">Marketing</button>
+          </li>
         </ul>
       </section>
       <section>
         <ul>
-          <img src="images/img (4) (1).jpg" alt="Banking" width="350" />
-          <h3 class="h3-courses">Banking-App-Interface-Concept</h3>
-          <h4 class="h4-clas">App</h4>
-          <img src="images/img (5) (1).jpg" alt="Cashless" width="350" />
-          <h3 class="h3-courses">Cashless-Payment</h3>
-          <h4 class="h4-clas">Marketing</h4>
-          <img src="images/img (6) (1).jpg" alt="Meditation" width="350" />
-          <h3 class="h3-courses">Meditation-App</h3>
-          <h4 class="h4-clas">App</h4>
-          <img src="images/img (7) (1).jpg" alt="Taxi" width="350" />
-          <h3 class="h3-courses">Taxi-Service</h3>
-          <h4 class="h4-clas">Marketing</h4>
-          <img src="images/img (8) (1).jpg" alt="Screen" width="350" />
-          <h3 class="h3-courses">Screen-Illustrations</h3>
-          <h4 class="h4-clas">Design</h4>
-          <img src="images/img (9) (1).jpg" alt="Online" width="350" />
-          <h3 class="h3-courses">Online-Courses</h3>
-          <h4 class="h4-clas">Marketing</h4>
-          <img src="images/img (10) (1).jpg" alt="Instragram" width="350" />
-          <h3 class="h3-courses">Instragram-Stories-Concept</h3>
-          <h4 class="h4-clas">Design</h4>
-          <img src="images/img (11) (1).jpg" alt="Organic" width="350" />
-          <h3 class="h3-courses">Organic-Food</h3>
-          <h4 class="h4-clas">Web-Site</h4>
-          <img src="images/img (12) (1).jpg" alt="Fresh" width="350" />
-          <h3 class="h3-courses">Fresh-Coffeep</h3>
-          <h4 class="h4-clas">Web-Site</h4>
+          <li>
+            <img src="images/img(4)(1).jpg" alt="Banking" width="350" />
+          </li>
+          <li>
+            <h3 class="h3-courses">Banking-App-Interface-Concept</h3>
+          </li>
+          <li>
+            <h4 class="h4-clas">App</h4>
+          </li>
+          <li>
+            <img src="images/img(5)(1).jpg" alt="Cashless" width="350" />
+          </li>
+          <li>
+            <h3 class="h3-courses">Cashless-Payment</h3>
+          </li>
+          <li>
+            <h4 class="h4-clas">Marketing</h4>
+          </li>
+          <li>
+            <img src="images/img(6)(1).jpg" alt="Meditation" width="350" />
+          </li>
+          <li>
+            <h3 class="h3-courses">Meditation-App</h3>
+          </li>
+          <li>
+            <h4 class="h4-clas">App</h4>
+          </li>
+          <li>
+            <img src="images/img(7)(1).jpg" alt="Taxi" width="350" />
+          </li>
+          <li>
+            <h3 class="h3-courses">Taxi-Service</h3>
+          </li>
+          <li>
+            <h4 class="h4-clas">Marketing</h4>
+          </li>
+          <li>
+            <img src="images/img(8)(1).jpg" alt="Screen" width="350" />
+          </li>
+          <li>
+            <h3 class="h3-courses">Screen-Illustrations</h3>
+          </li>
+          <li>
+            <h4 class="h4-clas">Design</h4>
+          </li>
+          <li>
+            <img src="images/img(9)(1).jpg" alt="Online" width="350" />
+          </li>
+          <li>
+            <h3 class="h3-courses">Online-Courses</h3>
+          </li>
+          <li>
+            <h4 class="h4-clas">Marketing</h4>
+          </li>
+          <li>
+            <img src="images/img(10)(1).jpg" alt="Instragram" width="350" />
+          </li>
+          <li>
+            <h3 class="h3-courses">Instragram-Stories-Concept</h3>
+          </li>
+          <li>
+            <h4 class="h4-clas">Design</h4>
+          </li>
+          <li>
+            <img src="images/img(11)(1).jpg" alt="Organic" width="350" />
+          </li>
+          <li>
+            <h3 class="h3-courses">Organic-Food</h3>
+          </li>
+          <li>
+            <h4 class="h4-clas">Web-Site</h4>
+          </li>
+          <li>
+            <img src="images/img(12)(1).jpg" alt="Fresh" width="350" />
+          </li>
+          <li>
+            <h3 class="h3-courses">Fresh-Coffeep</h3>
+          </li>
+          <li>
+            <h4 class="h4-clas">Web-Site</h4>
+          </li>
         </ul>
       </section>
     </main>
